mirantis/labs/dex/demo/manifests/dex-demo/dex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "dex.apps.labs-dex.mirantis.mart.red"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: dex
                port:
                  name: https
  tls: []
